--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "styleth"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["azor <azorvk@gmail.com>"]
 edition = "2018"
 
@@ -13,3 +13,4 @@ structopt = "0.3.21"
 indicatif = "0.15.0"
 rayon = "1.5.0"
 num_cpus = "1.13.0"
+regex = "1.5.3"
