--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "styleth"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["azor <azorvk@gmail.com>"]
 edition = "2018"
 
@@ -14,3 +14,4 @@ indicatif = "0.15.0"
 rayon = "1.5.0"
 num_cpus = "1.13.0"
 regex = "1.5.3"
+atomic-counter = "1.0.1"
